# Agent-System

./: .agentation.json  .aos-project.json  .env.example  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  WARP.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  railway.json  render.yaml  setup.sh
.claude/: README.md  agents-registry.json  commands-registry.json  hooks.json  launch.json  mcp.json  settings.json  skill-rules.json
.claude/agent-memory/: learnings.md
.claude/agents/: aos-orchestrator.md  backend-integration-specialist.md  background-verifier.md  eval-grader.md  eval-task-runner.md  performance-optimizer.md  quality-validator.md  test-automation-specialist.md  web-ui-specialist.md
.claude/checklists/: react-web-specific.md
.claude/commands/: ace-diagnostic.md  auto.md  backup.md  check-health.md  commit-push-pr.md  config-backup.md  deploy-with-tests.md  dev-docs.md  draft-commits.md  gemini-review.md  (+15 more)
.github/: dependabot.yml
.planning/: PROJECT.md  STATE.md
claude-workspace-template/: CHANGELOG.md  README.md  config.yaml.example  init.sh
docs/: QUICK_START.md  USER_GUIDE.md  adr.yaml  api-reference.md  architecture.md  claude-code-system-architecture.html  code-convention.yaml  dashboard.md  deployment.md  doc-update-rules.md  erd.md  features.md  ontology.md  phase_runner.md  recovery.md  system-evaluation-report.md  warp-mcp-setup.md  🧹 Clean Code Guidelines.md
projects/: image-maker  obsidian  ppt-maker  youtube-maker
ralph-loops/: README.md
scripts/: install-hooks.sh  phase_runner.py  pre-push.sh
src/backend/: .railwayignore  Dockerfile  Dockerfile.full  README.md  __init__.py  config.py  login.html  login_page.html  main.py  pyproject.toml  railway.toml  requirements-railway.txt  requirements.txt  styles.css  testing_requirements.txt
src/backend/agents/: __init__.py  base.py  lead_orchestrator.py  specialist.py
src/backend/agents/specialists/: __init__.py  backend_agent.py  mobile_ui_agent.py  test_agent.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 5d070cc25fe8_initial_migration.py  86bdb0f50c3c_add_project_id_to_audit_logs.py  a1b2c3d4e5f6_add_task_evaluations_and_feedback_cols.py  b7e4f9d2c8a1_add_rag_k_and_overrides_to_playground_sessions.py  c9f1e52a3b7c_add_rag_include_shared_to_playground_sessions.py  d1a2b3c4e5f7_add_rules_memory_injection_to_playground.py  f3a8b2c1d4e5_add_project_invitations.py
src/backend/api/: __init__.py  admin.py  agents.py  analytics.py  app.py  app_railway.py  artifacts.py  audit.py  auth.py  automation.py  claude_sessions.py  config_versions.py  context.py  cost_allocation.py  deps.py  diagnostics.py  external_usage.py  feedback.py  git.py  health.py  hitl.py  llm.py  llm_credentials.py  llm_proxy.py  llm_router.py  mcp.py  monitoring.py  notifications.py  organizations.py  permission_toggles.py  pipelines.py  playground.py  project_access.py  project_configs.py  projects.py  rag.py  rate_limits.py  routes.py  secrets.py  sessions.py  (+7 more)
src/backend/api/v1/: agent_monitor.py  agent_registry.py  agents.py  auth_middleware.py  rate_limiter.py  stations.py
src/backend/auth/: __init__.py  token_service.py
src/backend/auth/providers/: __init__.py  base.py  github.py  google.py  oidc.py  saml.py
src/backend/backups/db/: backup_20260219_230218.dump
src/backend/data/: organization_members.json  organizations.json
src/backend/db/: __init__.py  database.py  models.py  repository.py  types.py
src/backend/db/migrations/: add_org_id_to_projects.sql
src/backend/db/models/: __init__.py  activity.py  audit.py  auth.py  base.py  claude_session.py  config_version.py  cost.py  feedback.py  git.py  llm.py  model_update.py  notification.py  organization.py  playground.py  project.py  session.py  workflow.py
src/backend/middleware/: __init__.py  rate_limit.py
src/backend/models/: __init__.py  agent_state.py  analytics.py  artifact.py  audit.py  claude_session.py  config_version.py  context_usage.py  cost.py  diagnostics.py  errors.py  external_usage.py  feedback.py  git.py  hitl.py  llm_models.py  llm_router.py  mcp.py  message.py  monitoring.py  notification.py  organization.py  permissions.py  playground.py  project.py  project_config.py  rate_limit.py  secret.py  task.py  task_analysis.py  task_plan.py  template.py  types.py  workflow.py
src/backend/orchestrator/: __init__.py  engine.py  graph.py  nodes.py  parallel_executor.py  tools.py
src/backend/phase_runner/: __init__.py  __main__.py  checkbox_sync.py  migrate.py  runner.py  schema.py
src/backend/scripts/: migrate_json_to_db.py  migrate_project_owners.py  seed_projects_to_db.py
src/backend/services/: __init__.py  agent_manager.py  agent_registry.py  alerting_service.py  analytics_service.py  artifact_service.py  audit_integrity.py  audit_service.py  auth_service.py  automation_loop_service.py  claude_config_service.py  claude_session_monitor.py  code_entity_extractor.py  context_compressor.py  cost_allocation_service.py  credential_service.py  encryption_service.py  environment_diagnostic_service.py  external_usage_service.py  feedback_service.py  frontmatter_parser.py  git_service.py  github_service.py  health_service.py  key_management.py  llm_router_service.py  llm_service.py  logging_service.py  mcp_config_manager.py  mcp_manager.py  mcp_service.py  memory_manager.py  merge_service.py  model_update_service.py  notification_service.py  organization_service.py  playground_context.py  playground_service.py  playground_tools.py  project_access_service.py  (+29 more)
src/backend/services/pipeline/: __init__.py  models.py  pipeline_service.py  stage.py
src/backend/services/pipeline/stages/: __init__.py  analyze_stage.py  collect_stage.py  output_stage.py  transform_stage.py
src/backend/services/rag/: __init__.py  bm25.py  chunking.py  config.py  context_prefix.py  embeddings.py  fusion.py  indexing.py  models.py  query.py  query_expansion.py  reranking.py  store.py
src/backend/tools/: __init__.py  bash_tools.py  code_tools.py  file_tools.py  warp_tools.py
src/backend/utils/: time.py
(+1044 files in other folders)
