[project]
name = "agent-orchestration-service"
version = "0.1.0"
description = "Agent Orchestration Service with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-google-genai>=2.0.0",

    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",  # SQLAlchemy async 필수

    # Redis
    "redis>=5.2.0",

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "pyjwt>=2.8.0",
    "aiosmtplib>=3.0.0",  # SMTP email support

    # Monitoring
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "structlog>=24.4.0",

    # Vector DB & RAG
    "chromadb>=0.4.0",
    "langchain-chroma>=0.1.0",
    "sentence-transformers>=2.2.0",

    # Docker (for sandbox)
    "docker>=6.0.0",

    # Git integration
    "gitpython>=3.1.40",
    "PyGithub>=2.1.1",

    # Security / Encryption
    "cryptography>=42.0.0",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
monitoring = [
    "sentry-sdk[fastapi]>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "agents", "models", "orchestrator", "services", "tools", "db"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "B008",   # function-call-in-default-argument (FastAPI/Pydantic Field patterns)
    "B904",   # raise-without-from-inside-except (too many to refactor at once)
    "UP042",  # replace-str-enum (StrEnum migration deferred)
    "N815",   # mixed-case-variable-in-class-scope (API compatibility)
    "E402",   # module-import-not-at-top (conditional DB imports pattern)
    "E741",   # ambiguous-variable-name (e, l in context)
]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["N815", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests/backend"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
