[project]
name = "agent-orchestration-service"
version = "0.1.0"
description = "Agent Orchestration Service with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-google-genai>=2.0.0",
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0", # SQLAlchemy async 필수
    # Redis
    "redis>=5.2.0",
    # Utilities
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "pyjwt>=2.8.0",
    "aiosmtplib>=3.0.0", # SMTP email support
    # Monitoring
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "structlog>=24.4.0",
    # Vector DB & RAG
    "qdrant-client>=1.12.0",
    "langchain-qdrant>=0.2.0",
    "sentence-transformers>=2.2.0",
    "langchain-huggingface>=0.1.0",
    "rank_bm25>=0.2.2",
    # Web search tool backend
    "tavily-python>=0.5.0",
    # Docker (for sandbox)
    "docker>=6.0.0",
    # Git integration
    "gitpython>=3.1.40",
    "PyGithub>=2.1.1",
    # Security / Encryption
    "cryptography>=42.0.0",
    "bcrypt>=4.1.0",
    "apscheduler>=3.10.0",
    "croniter>=1.3.0",
    "python-multipart>=0.0.22",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
monitoring = [
    "sentry-sdk[fastapi]>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "agents", "models", "orchestrator", "services", "tools", "db"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "B008",   # function-call-in-default-argument (FastAPI/Pydantic Field patterns)
    "B904",   # raise-without-from-inside-except (too many to refactor at once)
    "UP042",  # replace-str-enum (StrEnum migration deferred)
    "N815",   # mixed-case-variable-in-class-scope (API compatibility)
    "E402",   # module-import-not-at-top (conditional DB imports pattern)
    "E741",   # ambiguous-variable-name (e, l in context)
]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["N815", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests/backend"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."
# 래칫(ratchet) 전략: 기존 위반 에러 코드는 비활성화.
# mypy는 실행되며, 새로운 타입의 에러는 차단됨.
# TODO: 에러 코드별로 점진적 활성화 (return-value → no-redef → call-arg 순)
disable_error_code = [
    "arg-type",           # 471건 — 인자 타입 불일치
    "assignment",         # 156건 — 대입 타입 불일치
    "attr-defined",       #  85건 — 미정의 속성 접근
    "union-attr",         #  55건 — Optional 속성 접근
    "import-untyped",     #   4건 — yaml 등 스텁 미설치
    "misc",               #  19건 — 기타
    "index",              #  19건 — 인덱스 타입
    "var-annotated",      #  18건 — 변수 어노테이션
    "call-arg",           #  12건 — 함수 호출 인자
    "return-value",       #   6건 — 반환값 타입
    "operator",           #   5건 — 연산자 타입
    "call-overload",      #   5건 — 오버로드 매칭
    "literal-required",   #   5건 — 리터럴 타입 필요
    "no-redef",           #   4건 — 이름 재정의
    "valid-type",         #   4건 — 유효하지 않은 타입
    "typeddict-unknown-key", # 4건
    "type-var",           #   1건
    "truthy-function",    #   1건
    "typeddict-item",     #   1건
    "has-type",           #   2건
    "unused-ignore",      #  11건
]
